{{$NEXT}}

0.14     2016-11-02

- Added a "named_to_list" option to support returning only the parameter
  values from a named parameter validator rather than the key-value pairs.

- Errors from calls to validation_for() now use croak so as to show up at the
  call site, rather than in the internals


0.13     2016-09-16

- Small fixes to make sure that you can pass both readonly and locked hashes
  to both validation_for and the subroutine it creates for you. Locked hashes
  work and readonly hashes sort of work on some Perls.

- Added a new parameter, "name_is_optional". When this is true, the "name"
  parameter is simply ignored when Sub::Util is not available, rather than
  causing an exception.

- Removed List::SomeUtils as a prereq.


0.12     2016-08-16

- Require Specio for tests instead of Type::Tiny. Type::Tiny does not work
  with blead and the maintainer has not responded to bug reports for a while.


0.11     2016-08-14

- Use Sub::Util instead of Sub::Name as our optional sub-naming module, since
  Sub::Util is part of core as of 5.22.


0.10     2016-08-10

- The parameters you pass when creating a validator are now validated.

- The $e->message returned when a Moose type fails now includes the parameter
  name or position. Adding these for other type systems will come in a future
  release.


0.09     2016-07-04

- Really make Sub::Name optional.


0.08     2016-07-03

- Renamed from Params-CheckCompiler to Params-ValidationCompiler.

- Made Sub::Name optional. If you try to set the name of a generation
  validation sub without Sub::Name installed, you will get a fatal error.


0.07     2016-06-18

- Make the compiled sub for checking named params die if given a single object
  as an argument, even if the object is implemented using a hashref. However,
  if the object overloads hash dereferencing then the overloading is
  used. Reported by Mark Fowler. GitHub #3.

- Renamed compile() to validation_for(). The latter is not a very specific