@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Previously, using a default with a positional parameter would result in an
+  error when compiling the validator subroutine. Defaults now work with
+  positional parameters. Implemented by Greg Oschwald. Based on PR #5.
+
+
 0.14     2016-11-02
 
 - Added a "named_to_list" option to support returning only the parameter
